--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ language: 'en-uk'
 baseurl: /jasper2/
 
 # Website info
-title: Dox.io
-description: Online Portfolio
+title: Dox.io's Portfolio
+description: UX/UI Designer - Online Portfolio
 cover: assets/images/blog-cover.jpg
 logo: assets/images/blog-icon.png
 logo_dark: assets/images/favicon.png
@@ -22,8 +22,8 @@ navigation: True # show the navbar links
 subscribers: True # you need to connect an external service for this to work,
 # if 'True' the submit button is disabled for now, but you can change that
 # by editing `_includes/subscribe-form.html`
-twitter: tryghost # replace by your username
-facebook: ghost # replace by your username
+twitter: RCoroban # replace by your username
+facebook: raul.coroban.96 # replace by your username
 
 # Disqus
 disqus: False
@@ -66,7 +66,7 @@ feed:
 # or "master" otherwise
 safe: False
 lsi: False
-username: jekyller
+username: RaulCoroban
 repo: jasper2
 branch: master
 relative_source: ../jasper2/
