--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: /jasper2/
 title: Dox.io's Portfolio
 description: UX/UI Designer - Online Portfolio
 cover: assets/images/blog-cover.jpg
-logo: assets/images/blog-icon.png
+logo: assets/images/logo-doxio.png
 logo_dark: assets/images/favicon.png
 favicon: assets/images/favicon.png
 production_url: https://jekyller.github.io/jasper2/
