--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title: Dox.io's Portfolio
 description: UX/UI Designer - Online Portfolio
 cover: assets/images/blog-cover.jpg
 logo: assets/images/logo-doxio.png
-logo_dark: assets/images/favicon.png
-favicon: assets/images/favicon.png
+logo_dark: assets/images/dark-logo-doxio.png
+favicon: assets/images/dark-logo-doxio.png
 production_url: https://jekyller.github.io/jasper2/
 source_url: https://github.com/jekyller/jasper2/
 
