--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ cover: assets/images/blog-cover.jpg
 logo: assets/images/logo-doxio.png
 logo_dark: assets/images/dark-logo-doxio.png
 favicon: assets/images/dark-logo-doxio.png
-production_url: https://jekyller.github.io/jasper2/
+production_url: https://jekyller.github.io/Doxio/
 source_url: https://github.com/jekyller/jasper2/
 
 # Social info
@@ -69,8 +69,8 @@ lsi: False
 username: RaulCoroban
 repo: jasper2
 branch: master
-relative_source: ../jasper2/
-destination: ../jasper2-pages/
+relative_source: ../Doxio/
+destination: ../Doxio-pages/
 production_url:  https://jekyller.github.io/jasper2/
 source_url:  https://github.com/jekyller/jasper2/
 
