--- a/_config.yml
+++ b/_config.yml
@@ -71,8 +71,8 @@ repo: jasper2
 branch: master
 relative_source: ../Doxio/
 destination: ../Doxio-pages/
-production_url:  https://jekyller.github.io/jasper2/
-source_url:  https://github.com/jekyller/jasper2/
+production_url:  https://raulcoroban.github.io/Doxio/
+source_url:  https://github.com/RaulCoroban/Doxio/
 
 exclude:
   - assets/css
