--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ permalink: /:title
 plugins: [jekyll-paginate, jekyll-feed]
 
 feed:
-  path: feed.xml
+  path: atom.xml
 
 # Additional settings available on the front-matter
 # Site logo in the index.html (as in demo.ghost.io)
