--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -74,3 +74,13 @@ martin:
   facebook: False
   twitter: False
   cover: False
+raul:
+  username: raulcoroban
+  name: Raul Coroban
+  location: Amsterdam, NL
+  url: hannah.wf
+  bio: Hannah is the co-founder and lead developer at Ghost. She spends her days looking after Ghost's developer community, tracking down bugs & ensuring Ghost(Pro) is a happy place.
+  picture: assets/images/hannah.jpg
+  facebook: False
+  twitter: erisds
+  cover: assets/images/hannah-cover.jpg
