--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -1,16 +1,16 @@
-speeches:
-  name: speeches
-  description: Some of the greatest words ever spoken.
-  cover: assets/images/speeches.jpg
-fiction:
-  name: fiction
-  description: False
-  cover: False
-fables:
-  name: fables
-  description: A series of short stories that make you think.
-  cover: assets/images/fables.jpg
-getting-started:
-  name: getting-started
-  description: False
-  cover: False
+acm:
+  name: Acm
+  description: The greatest computer science association.
+  cover: assets/images/tags/acmtag.jpg
+mobile app:
+  name: Mobile App
+  description: Designs crafted for mobile platforms.
+  cover: assets/images/tags/mobiletag.jpg
+ios:
+  name: iOS
+  description: Beauty for Cupertino's devices.
+  cover: assets/images/tags/iOStag.jpg
+android:
+  name: Android
+  description: Google tailored apps.
+  cover: assets/images/tags/androidtag.jpg
