--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ facebook: raul.coroban.96 # replace by your username
 google_analytics: UA-123993659-1 # replace with your GA tracking identifier
 
 # Permalinks
-# permalink: /:title
+ permalink: /:title
 # permalink: /author/:author
 # permalink: /tag/:tag
 
