--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,9 @@ facebook: raul.coroban.96 # replace by your username
 google_analytics: UA-123993659-1 # replace with your GA tracking identifier
 
 # Permalinks
- permalink: /:title
+permalink: /:title
 # permalink: /author/:author
-# permalink: /tag/:tag
+permalink: /tag/:tag
 
 # Authors' info in `_data/authors.yml`
 # Tags' info in `_data/tags_info.yml`
