--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ paginate: 100 # it will paginate after this number
 language: 'en-uk'
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: /Doxio/
+baseurl: /Doxio-W/
 
 # Website info
 title: Dox.io - Writing
